--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
                 <h1>LOJA CAMINHOS DO SOL</h1>
                 <h1>VENHA CONFERIR</h1>
                 <h1>SÓ COISA BOA FML</h1>
-                <p>blablablablablablablablablablablablablablablablablablablablablablablablabla.</p>
+                <p>blablablablblablablablablablablabla.</p>
                 <span>R$434,90</span>
                 <a href="">ADICIONAR AO CARRINHO</a>
             </div>
