--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>SÓ COISA BOA FML</h1>
                 <p>blablablablblablablablablablablabla.</p>
                 <span>R$434,90</span>
-                <a href="">ADICIONAR AO CARRINHO</a>
+                <a href="carrossel.html">ADICIONAR AO CARRINHO</a>
             </div>
             <div class="right-side">
                 <div class="img">
