colocando linkagem nos butão

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     alt="logo da loja">
             </div>
             <nav class="menu-items">
-                <a href=""><img src="search.png"></a>
-                <a href=""><img src="cart.png"></a>
+                <a href="novoCavalo.html"><img src="search.png"></a>
+                <a href="pagina.html"><img src="cart.png"></a>
                 <a href=""><img src="menu.png"></a>
             </nav>
         </div>
